--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to ECR...
       - aws --version
-      - aws ecr get-login-password --region us-east-1 --no-include-email
+      - $(aws ecr get-login-password --region us-east-1 --no-include-email)
       - REPOSITORY_URI=112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
