--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,8 +9,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t 112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web:latest .
+      - docker tag 112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web:latest 112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web:$IMAGE_TAG
 
   post_build:
     commands:
