--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,26 +1,27 @@
 version: 0.2
+
 phases:
-  install:
-    runtime-versions:
-      docker: 18
-      
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login --no-include-email --region us-east-1
-
+      - aws --version
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 112113402575.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
+      - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t simple-web:$CODEBUILD_RESOLVED_SOURCE_VERSION .
-      - docker tag simple-web:$CODEBUILD_RESOLVED_SOURCE_VERSION 112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web:$CODEBUILD_RESOLVED_SOURCE_VERSION
-
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
-      - echo Pushing the Docker image to Amazon ECR...
-      - docker push 112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"container-name","imageUri":"%s"}]' 112113402575.dkr.ecr.us-east-1.amazonaws.com/simple-web:$CODEBUILD_RESOLVED_SOURCE_VERSION > imagedefinitions.json
-
+      - printf '[{"name":"hello-world","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-  files: imagedefinitions.json
+    files: imagedefinitions.json
