--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,6 +15,7 @@ phases:
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - printf '[{"name":"container_name","imageUri":"image_URI"}]' > ecs-task-definition.json
   post_build:
     commands:
       - echo Build completed on `date`
